OpenSLP Change Log
------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

02/08/01 mpeterson@caldera.com
Added code to make sure that DAAdvert bootstamps are never the same in 
messages generated by slpd

02/08/01 mpeterson@caldera.com
Changes to use SLPXidGenerate() from common/slp_xid.c to generate Message 
XIDs instead of rand()

02/08/01 mpeterson@caldera.com
Changes to allow reinitalized slpd (SIGHUP) properly represent changes
made to static registration file (slp.reg)

01/23/01 mpeterson@caldera.com
Added timestamps to logging

01/23/01 mpeterson@caldera.com
Fixed logging so that existing log will not be truncated by new slpd 
instance

01/04/01 mpeterson@caldera.com
Fixed bug where slpd looped tightly when no network interfaces are available

12/25/00 rganesan@myrealbox.com
Fully support dist target. You can now run "make dist" to make a release.

*** TAG OpenSLP 0.8.1 ***

12/19/00 mpeterson@caldera.com
Changes as suggested by Olaf Kirch's security audit

12/15/00 mpeterson@caldera.com
modified GetHostName() so that a resolve occurs on return from gethostname()

12/14/00 rganesan@myrealbox.com
slpd.log and slpd.pid file locations now change depending on the prefix. 

12/13/00 rganesan@myrealbox.com
Introduced predicate version field in srvrqst structure. Passed predicate 
version (v1 or v2) all the way down to SLPDPredicateTest(). 
SLPDPredicateTest() does not handle v1 predicates yet, so it still returns
success without looking at the predicate.

12/12/00 mpeterson@caldera.com
Added code to refresh SLP_LIFETIME_MAXIMUM services

12/12/00 mpeterson@caldera.com
Fixed bug where non-responsive DAs were used repeatedly

12/08/00 mpeterson@caldera.com